<resources>
    <string name="app_name">UIBeautifulCollection2</string>
    <string name="next_button">Next</string>
    <string name="search">Search destination</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="partners">Partners</string>
    <string name="tours">Tours</string>
    <string name="text">Text</string>
    <string name="mydashboard">My DashBoard</string>
    <string name="dashboarditems">12 items</string>
    <string name="adventure">ADVENTURE</string>
    <string name="leisure">LEISURE</string>
    <string name="foodsafari">FOOD SAFARI</string>
    <string name="where">Where is your next big adventure ?</string>
    <string name="hi">Hi, Jacob</string>
    <string name="country">Country/City</string>
    <string name="whatname">What is the name of your trip ?</string>
    <string name="tintname">Mexico w/TripHappy</string>
    <string name="date">Do you know the dates for your trip ?</string>
    <string name="describe">Describe your trip: </string>
    <string name="tinddescribe">Joining up with the TripHappy dev team!</string>
    <string name="limitcharacter">150 character max</string>
    <string name="publish">Publish to Community</string>
    <string name="date1">Sep 3,2016</string>
    <string name="date2">Nov 17,2016</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="plan">Travel plan</string>
    <string name="tokyo">Tokyo (Japan)</string>
    <string name="seemore">See more</string>
    <string name="haiphong">Hai Phong</string>
    <string name="onefrom7">(One From 7 Wonders of World)</string>
    <string name="address">Hai Phong city, Vietnam</string>
    <string name="extra">-</string>
    <string name="photography">Photography</string>
    <string name="picnic">Picnic</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="about">About</string>
    <string name="introducehaiphong">Haiphong is a coastal city located at the mouth of the Cấm River (Cấm River), in Vietnam</string>
    <string name="likes">Like</string>
    <string name="reviews">2030 viewers</string>
    <string name="map_api_key">AIzaSyAAe3BmnLc55uKywvOa3CvKFNQ0oWnxYYk</string>
    <string name="link">DirectLink.iso</string>
    <string name="confirm">You need to move to direct website</string>
    <string name="gotomap">Go to google map !</string>
    <string name="or">OR</string>
    <string name="turnback">Turning back !</string>
    <string name="likeit">Do you like it ?</string>
</resources>
