<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/whitecolor"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_add">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_first"
                    android:text="@string/country"
                    android:textColor="@color/whitecolor"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="15dp"
                >
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/plan"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="See more"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/addtourcolor"
                    android:id="@+id/btn_seemore"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="15dp"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/japan"
                    android:id="@+id/img_flagcountry"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tokyo"
                    android:textSize="15sp"
                    android:id="@+id/tv_destiny"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_work"
            android:id="@+id/img_work"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="@string/whatname"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edt_nametrip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/whitecolor"
                android:hint="@string/tintname"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/date"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:id="@+id/btn_calendar1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/calendar"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:background="@color/whitecolor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:textSize="15sp"
                        android:text="@string/date1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:id="@+id/btn_calendar2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/calendar"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:background="@color/whitecolor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:textSize="15sp"
                        android:text="@string/date2"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="@string/describe"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/whitecolor"
                android:hint="@string/tinddescribe"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limitcharacter"
                android:textSize="15sp"
                android:layout_margin="10dp"
                />
            <RadioGroup
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish"
                    android:textSize="20sp"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    >
                    <RelativeLayout
                        android:background="@color/btnsave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <TextView
                            android:textColor="@color/whitecolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/save"
                            android:textSize="20sp"
                            android:id="@+id/tv_btnsave"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    >
                    <RelativeLayout
                        android:background="@color/btncancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <TextView
                            android:textColor="@color/whitecolor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/cancel"
                            android:textSize="20sp"
                            android:id="@+id/tv_btncancel"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>