<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/haiphong"
            android:scaleType="fitXY"
            android:id="@+id/img_showinfo"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrowback"
            android:layout_margin="10dp"
            android:id="@+id/img_combackinfo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:id="@+id/lay1"></LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_below="@id/lay1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_nameifo"
                    android:textStyle="bold"
                    android:text="@string/haiphong"
                    android:textSize="25sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/onefrom7"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <ImageView
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_location"
                        android:id="@+id/img_location"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:textSize="23sp"
                        android:text="@string/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_addressifo"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_date1"
                        android:textSize="20sp"
                        android:text="@string/date1"
                        android:layout_marginRight="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/extra"
                        android:paddingRight="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_date2"
                        android:textSize="20sp"
                        android:text="@string/date2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginBottom="30dp"
                    >
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:scaleType="fitXY"
                            android:layout_centerInParent="true"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/circle1"
                            android:src="@drawable/ic_circle"
                            />
                        <ImageView
                            android:src="@drawable/camera"
                            android:layout_centerInParent="true"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:id="@+id/img_camerainfo"
                            />
                        <TextView
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"
                            android:text="@string/photography"
                            android:layout_below="@id/circle1"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:scaleType="fitXY"
                            android:layout_centerInParent="true"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/circle2"
                            android:src="@drawable/ic_circle"
                            />
                        <ImageView
                            android:src="@drawable/picnic2"
                            android:layout_centerInParent="true"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:id="@+id/img_picnic"
                            />
                        <TextView
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"
                            android:text="@string/picnic"
                            android:layout_below="@id/circle2"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:scaleType="fitXY"
                            android:layout_centerInParent="true"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/circle3"
                            android:src="@drawable/ic_circle"
                            />
                        <ImageView
                            android:src="@drawable/sightseeing"
                            android:layout_centerInParent="true"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:id="@+id/img_seeing"
                            />
                        <TextView
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"
                            android:text="@string/sightseeing"
                            android:layout_below="@id/circle3"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/introducehaiphong"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_descripinfo"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card2"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/like3"
                    android:scaleType="fitXY"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/likes"
                        android:textColor="@color/like"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:text="@string/reviews"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
            
    </RelativeLayout>
</ScrollView>