<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnsave">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:textStyle="bold"
                android:textColor="@color/whitecolor"
                android:textSize="35sp"
                android:text="@string/link"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm"
            android:textSize="25sp"
            android:paddingTop="10dp"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/moving"
            android:scaleType="fitXY"
            android:layout_margin="15dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_tours"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@color/btnsave"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_movingwebsite"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_go"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/gotomap"
                    android:gravity="center"
                    android:textColor="@color/btnsave"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="25sp"
            android:layout_gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_tours"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@color/addtour"
                >
                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/turnback"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/whitecolor"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">
        </LinearLayout>
    </LinearLayout>
</ScrollView>